--- a/ThePCdb/HomeScreen.xaml
+++ b/ThePCdb/HomeScreen.xaml
@@ -30,9 +30,9 @@
             <TextBlock Text="THEPCDB" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="48"/>
 
             <Button Grid.Row="1" Grid.Column="1" Content="Custom Build" Foreground="White" FontSize="24" Width="225" Height="100"/>
-            <Image Grid.Row="1" Source="Assets/BuildLogo.png" Height="75" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <Image Grid.Row="1" Source="Assets/BuildLogo2.png" Height="75" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <Button Grid.Row="2" Grid.Column="1" Content="Recommend Build" Foreground="White" FontSize="24" Width="225" Height="100"/>
-            <Image Grid.Row="2" Source="Assets/ReccomendedLogo.png" Height="85" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <Image Grid.Row="2" Source="Assets/ReccomendedLogo2.png" Height="85" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <Button Grid.Row="3" Grid.Column="1" Content="Browse Parts" Foreground="White" FontSize="24" Width="225" Height="100"/>
             <Image Grid.Row="3" Source="Assets/BrowseLogo.png" Height="75" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
