Added Empty Combo Box

--- a/ThePCdb/BrowsePage.xaml
+++ b/ThePCdb/BrowsePage.xaml
@@ -14,7 +14,8 @@
                 <GradientStop Color="#FF1452D6" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center"/>
-        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click"/>
+        <ComboBox x:Name="PartBox" Header="Parts" HorizontalAlignment="Center" Margin="538,195,548,0" Height="112" Width="414" Background="#FFFFFFFF" BorderBrush="#66FBFBFB" FocusVisualPrimaryBrush="Black" Foreground="White" FontFamily="Consolas" FontSize="36"/>
+        <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Height="80" Margin="582,0,582,920" VerticalAlignment="Bottom"/>
+        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" Margin="616,776,634,124"/>
     </Grid>
 </Page>
