--- a/ThePCdb/BrowsePage.xaml
+++ b/ThePCdb/BrowsePage.xaml
@@ -16,6 +16,6 @@
         </Grid.Background>
         <ComboBox x:Name="CPUBox" Header="CPU" HorizontalAlignment="Center" Margin="10,252,8,0" Height="112" Width="600" Background="#FFFFFFFF" BorderBrush="#66FBFBFB" FocusVisualPrimaryBrush="Black" Foreground="Black" FontFamily="Consolas" FontSize="36"/>
         <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Margin="41,0,55,665" Height="80" VerticalAlignment="Bottom"/>
-        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" Margin="616,776,634,124"/>
+        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0, 0, 0, 50" Click="Button_Click"/>
     </Grid>
 </Page>
