--- a/ThePCdb/BrowsePage.xaml
+++ b/ThePCdb/BrowsePage.xaml
@@ -7,21 +7,21 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid HorizontalAlignment="Right" Width="432">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75*"/>
+            <RowDefinition Height="53*"/>
+        </Grid.RowDefinitions>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FF101623" Offset="0.048"/>
                 <GradientStop Color="#FF1452D6" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <ComboBox x:Name="CPUBox" Header="CPU" HorizontalAlignment="Center" Margin="10,252,8,0" Height="112" Width="414" Background="#FFFFFFFF" BorderBrush="#66FBFBFB" FocusVisualPrimaryBrush="Black" Foreground="White" FontFamily="Consolas" FontSize="36">
-            <ComboBox.ItemTemplate>
-                <DataTemplate x:DataType="local:Component/CPU">
-                    
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Margin="41,0,55,665" Height="80" VerticalAlignment="Bottom"/>
-        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" Margin="616,776,634,124"/>
+        <ComboBox x:Name="CategoryBox" Header="Category" Height="89" Margin="63,142,0,-231" RenderTransformOrigin="-0.57,0.773" Width="313"  Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.RowSpan="2"/>
+        <Button Content="Select" Grid.Row="0" HorizontalAlignment="Center" Height="70" Width="250" Grid.RowSpan="1" Margin="90,0,94,-120" Foreground="White" FontSize="24" Click="Button_Click_1" />
+        <ComboBox x:Name="PartBox" Header="Part" HorizontalAlignment="Center" Margin="63,325,56,-414" Height="89" Width="313" Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.RowSpan="2"/>
+        <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Margin="41,0,55,346.6" Height="80" VerticalAlignment="Bottom"/>
+        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" Margin="90,100.4,94,119" Grid.Row="1"/>
     </Grid>
 </Page>
