--- a/ThePCdb/BrowsePage.xaml
+++ b/ThePCdb/BrowsePage.xaml
@@ -7,21 +7,27 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid HorizontalAlignment="Right" Width="432">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="75*"/>
-            <RowDefinition Height="53*"/>
-        </Grid.RowDefinitions>
+    <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FF101623" Offset="0.048"/>
                 <GradientStop Color="#FF1452D6" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <ComboBox x:Name="CategoryBox" Header="Category" Height="89" Margin="63,142,0,-231" RenderTransformOrigin="-0.57,0.773" Width="313"  Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.RowSpan="2"/>
-        <Button Content="Select" Grid.Row="0" HorizontalAlignment="Center" Height="70" Width="250" Grid.RowSpan="1" Margin="90,0,94,-120" Foreground="White" FontSize="24" Click="Button_Click_1" />
-        <ComboBox x:Name="PartBox" Header="Part" HorizontalAlignment="Center" Margin="63,325,56,-414" Height="89" Width="313" Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.RowSpan="2"/>
-        <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Margin="41,0,55,346.6" Height="80" VerticalAlignment="Bottom"/>
-        <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" Margin="90,100.4,94,119" Grid.Row="1"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Foreground="White" FontSize="60" Text="Browse Parts" HorizontalAlignment="Center" Height="80" Margin="20" Grid.Row="0"/>
+            <ComboBox x:Name="CategoryBox" Header="Category" Height="89" Width="400"  Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.Row="1" HorizontalAlignment="Center"/>
+            <Button Content="Select" Grid.Row="2" HorizontalAlignment="Center" Height="70" Width="250" Grid.RowSpan="1"  Foreground="White" FontSize="24" Click="Button_Click_1" Margin="20"/>
+            <ComboBox x:Name="PartBox" Header="Part" HorizontalAlignment="Center" Height="89" Width="400" Background="White" Foreground="Red" FontFamily="Consolas" FontSize="24" Grid.Row="3"/>
+            <Button Content="Back" Foreground="White" FontSize="24" Width="250" Height="100" HorizontalAlignment="Center" Click="Button_Click" VerticalAlignment="Bottom" Grid.Row="4" Margin="100"/>
+        </Grid>
     </Grid>
 </Page>
