Fixed Back Button Position

--- a/ThePCdb/CustomBuildPage.xaml
+++ b/ThePCdb/CustomBuildPage.xaml
@@ -36,7 +36,7 @@
             <ComboBox Grid.Row="7" x:Name="StorageBox" Header="Storage" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
             <ComboBox Grid.Row="8" x:Name="GPUBox" Header="GPU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
             <ComboBox Grid.Row="9" x:Name="PSUBox" Header="PSU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
-            <Button Grid.Row="10" Content="Back" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Click="Button_Click"/>
+            <Button Grid.Row="10" Content="Back" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Margin ="0,100" Click="Button_Click"/>
         </Grid>
     </Grid>
 </Page>
