--- a/ThePCdb/CustomBuildPage.xaml
+++ b/ThePCdb/CustomBuildPage.xaml
@@ -26,6 +26,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Foreground="White" FontSize="60" Text="Custom Build" HorizontalAlignment="Center"/>
             <ComboBox Grid.Row="1" x:Name="CPUBox" Header="CPU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
@@ -36,7 +37,8 @@
             <ComboBox Grid.Row="6" x:Name="StorageBox" Header="Storage" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
             <ComboBox Grid.Row="7" x:Name="GPUBox" Header="GPU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
             <ComboBox Grid.Row="8" x:Name="PSUBox" Header="PSU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="300"/>
-            <Button Grid.Row="9" Content="Back" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Click="Button_Click" Margin="0, 25, 0, 0"/>
+            <Button Grid.Row="10" Content="Back" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Click="Button_Click" Margin="0, 10, 0, 0"/>
+            <Button Grid.Row="9" Content="Build!" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Margin="0,15,0,0"/>
         </Grid>
     </Grid>
 </Page>
