--- a/ThePCdb/CustomBuildPage.xaml
+++ b/ThePCdb/CustomBuildPage.xaml
@@ -30,16 +30,18 @@
             </Grid.RowDefinitions>
             
             <TextBlock Grid.Row="0" Foreground="White" FontSize="60" Text="Custom Build" HorizontalAlignment="Center"/>
-            <ComboBox Grid.Row="1" x:Name="CPUBox" Header="CPU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="2" x:Name="MotherBoardBox" Header="MotherBoard" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="3" x:Name="RAMBox" Header="RAM" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="4" x:Name="CoolingBox" Header="Cooling Part" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="5" x:Name="CaseBox" Header="Case" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="6" x:Name="StorageBox" Header="Storage" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="7" x:Name="GPUBox" Header="GPU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <ComboBox Grid.Row="8" x:Name="PSUBox" Header="PSU" Foreground="White" FontFamily="Consolas" FontSize="20" HorizontalAlignment="Center" Width="400"/>
-            <Button Grid.Row="10" Content="Back" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Click="Button_Click" Margin="0, 10, 0, 0"/>
-            <Button Grid.Row="9" Content="Build!" Foreground="White" FontSize="24" Width="250" Height="50" HorizontalAlignment="Center" Margin="0,15,0,0"/>
+            <ComboBox Grid.Row="1" x:Name="CPUBox" Header="CPU" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="2" x:Name="MotherBoardBox" Header="MotherBoard" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="3" x:Name="RAMBox" Header="RAM" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="4" x:Name="CoolingBox" Header="Cooling Part" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="5" x:Name="CaseBox" Header="Case" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="6" x:Name="StorageBox" Header="Storage" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="7" x:Name="GPUBox" Header="GPU" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <ComboBox Grid.Row="8" x:Name="PSUBox" Header="PSU" Foreground="White" FontSize="20" HorizontalAlignment="Center" Width="400"/>
+            <StackPanel Orientation="Horizontal" Grid.Row="9" Margin="10" HorizontalAlignment="Center">
+                <Button Content="Build!" Foreground="White" FontSize="24" Width="200" Height="50" Margin="0,5,0,0" Click="Button_Click_1"/>
+                <Button Content="Back" Foreground="White" FontSize="24" Width="200" Height="50" Click="Button_Click" Margin="10, 5, 0, 0"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
